修改首頁按鈕

--- a/About.html
+++ b/About.html
@@ -16,12 +16,17 @@
 
 <body>
     <!-- 漢堡條 -->
-    <div class="ham-ani hamburger">
-        <div class="stick stick-1"></div>
-        <div class="stick stick-2"></div>
-        <div class="stick stick-3"></div>
+
+    <div class="hamburger">
+        <div class="ham-ani">
+            <div class="stick stick-1"></div>
+            <div class="stick stick-2"></div>
+            <div class="stick stick-3"></div>
+        </div>
+        <div class="ham-menu">MENU</div>
     </div>
     <div class="btn-groupxxx">
+        <div class="decoration">&emsp;</div>
         <div class="btnsss">
             <div class="icons">
                 <div class="icon">FB</div>
@@ -29,18 +34,30 @@
                 <div class="icon">E-mail</div>
             </div>
             <div class="btns">
-                <a href="./index.html" id="btn-index" class="btn">Home</a>
-                <a href="./About.html" class="btn ">關於十鼓</a>
-                <a href="./News.html" class="btn ">最新消息</a>
-                <a href="./Facility.html" class="btn ">設施體驗</a>
-                <a href="./Drum.html" class="btn ">鼓樂饗宴</a>
-                <a href="./Information.html" class="btn ">入園資訊</a>
-                <a href="./Rented.html" class="btn ">場地租借</a>
+                <a href="./index.html" class="btn btn-index">Home&nbsp;<i class="far fa-home"></i></a>
+                <a href="./About.html" class="btn">
+                    <h1>關於十鼓</h1>
+                </a>
+                <a href="./News.html" class="btn">
+                    <h1>最新消息</h1>
+                </a>
+                <a href="./Facility.html" class="btn">
+                    <h1>設施體驗</h1>
+                </a>
+                <a href="./Drum.html" class="btn">
+                    <h1>鼓樂饗宴</h1>
+                </a>
+                <a href="./Information.html" class="btn">
+                    <h1>入園資訊</h1>
+                </a>
+                <a href="./Rented.html" class="btn">
+                    <h1>場地租借</h1>
+                </a>
             </div>
             <div class="infor">
                 <div class="top">
-                    <div class="lan">中文</div>
-                    <div class="lan">英文</div>
+                    <div class="lan en">EN</div>
+                    <div class="lan cn">中</div>
                 </div>
             </div>
             <div class="bott">
@@ -142,7 +159,9 @@
             <div class="swiper-slide about-slide color-E9C37C">
                 <div class="abouts ">
                     <div class="en-title">
-                        About<u class="line02">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;</u></div>
+                        About<u
+                            class="line02">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;</u>
+                    </div>
                     <div class="cn-title cn-white">
                         &emsp; <u class="line01">&emsp;</u>園區主題介紹
                     </div>
