--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
     <div class="Nav">
         <img src="./img/十鼓logo去背.png" alt="" class="Logo-pic barrelRoll">
         <div class="Menu-group">
-            <a href="./About.html" class="index-btn">關於十鼓</a>
-            <a href="./News.html" class="index-btn">最新消息</a>
-            <a href="./Facility.html" class="index-btn">設施體驗</a>
-            <a href="./Drum.html" class="index-btn">鼓樂饗宴</a>
-            <a href="./Information.html" class="index-btn">入園資訊</a>
-            <a href="./Rented.html" class="index-btn">場地租借</a>
+            <a href="./About.html" class="index-btn btn btn--stripe">關於十鼓</a>
+            <a href="./News.html" class="index-btn btn btn--stripe">最新消息</a>
+            <a href="./Facility.html" class="index-btn btn btn--stripe">設施體驗</a>
+            <a href="./Drum.html" class="index-btn btn btn--stripe">鼓樂饗宴</a>
+            <a href="./Information.html" class="index-btn btn btn--stripe">入園資訊</a>
+            <a href="./Rented.html" class="index-btn btn btn--stripe">場地租借</a>
         </div>
     </div>
     <div class="big-img"></div>
