首頁調整10-01-20點57

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="./TenDrum.css">
     <link rel="stylesheet" href="./wickedcss.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap" rel="stylesheet">
     <style>
 
     </style>
