--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="./TenDrum.css">
     <link rel="stylesheet" href="./wickedcss.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+HK:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+HK:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
     <style>
 
     </style>
@@ -18,12 +20,24 @@
     <div class="Nav">
         <img src="./img/十鼓logo去背.png" alt="" class="Logo-pic barrelRoll">
         <div class="Menu-group">
-            <a href="./About.html" class="index-btn btn btn--stripe">關於十鼓</a>
-            <a href="./News.html" class="index-btn btn btn--stripe">最新消息</a>
-            <a href="./Facility.html" class="index-btn btn btn--stripe">設施體驗</a>
-            <a href="./Drum.html" class="index-btn btn btn--stripe">鼓樂饗宴</a>
-            <a href="./Information.html" class="index-btn btn btn--stripe">入園資訊</a>
-            <a href="./Rented.html" class="index-btn btn btn--stripe">場地租借</a>
+            <a href="./About.html" class="index-btn ">
+                <div class="btn btn--stripe">關於十鼓</div>
+            </a>
+            <a href="./News.html" class="index-btn ">
+                <div class="btn btn--stripe">最新消息</div>
+            </a>
+            <a href="./Facility.html" class="index-btn ">
+                <div class="btn btn--stripe">設施體驗</div>
+            </a>
+            <a href="./Drum.html" class="index-btn">
+                <div class="btn btn--stripe">鼓樂饗宴</div>
+            </a>
+            <a href="./Information.html" class="index-btn">
+                <div class="btn btn--stripe">入園資訊</div>
+            </a>
+            <a href="./Rented.html" class="index-btn">
+                <div class="btn btn--stripe">場地租借</div>
+            </a>
         </div>
     </div>
     <div class="big-img"></div>
