--- a/About.html
+++ b/About.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Exo+2">
+    <link rel="stylesheet" href="./subtitle.css">
 
 
     <style>
@@ -89,8 +91,8 @@
                 </div>
             </div>
             <div class="swiper-slide color-D4A63F">
-                <div class="abouts ">
-                    <div class="about-title irregular-circle irregular-color01">簡介
+                <div class="abouts subtitle">
+                    <div class="about-title gooey">
                     </div>
                     <div class="about-text">十鼓仁糖文創園區(仁德糖廠)前身為臺南車路墘糖廠為一處百年糖廠建築，一座親近文化藝術的新天地。園區佔 地約 7.5公頃，共有 22
                         座日治時代建築及自然生態空間，
