副標題全動畫

--- a/About.html
+++ b/About.html
@@ -92,7 +92,7 @@
             </div>
             <div class="swiper-slide color-D4A63F">
                 <div class="abouts subtitle">
-                    <div class="about-title gooey">
+                    <div class="about-title gooey">簡介
                     </div>
                     <div class="about-text">十鼓仁糖文創園區(仁德糖廠)前身為臺南車路墘糖廠為一處百年糖廠建築，一座親近文化藝術的新天地。園區佔 地約 7.5公頃，共有 22
                         座日治時代建築及自然生態空間，
@@ -101,7 +101,7 @@
             </div>
             <div class="swiper-slide">
                 <div class="abouts">
-                    <div class="about-title irregular-circle irregular-color01">沿革</div>
+                    <div class="about-title gooey">沿革</div>
                     <div class="about-text">
                         <p>本廠前身為「車路墘製糖所」
                             ，1909年由日資「臺灣製糖株式會社」創立，1910年開工生產。民國34年11月由國民政府資源委員會監理，並於次年接收。34/35年期製糖在資源委員會監理下，由原日人製糖會社人員完成。
@@ -114,7 +114,7 @@
             </div>
             <div class="swiper-slide">
                 <div class="abouts">
-                    <div class="about-title irregular-circle irregular-color02">核心價值</div>
+                    <div class="about-title gooey">核心價值</div>
                     <div class="about-text">
                         <p>傳創台灣本土擊樂，廣納世界文化</p>
                         <p>尊重歷史文化與之共存、共榮 </p>
@@ -125,7 +125,7 @@
             </div>
             <div class="swiper-slide">
                 <div class="abouts">
-                    <div class="about-title irregular-circle irregular-color03">發展年表</div>
+                    <div class="about-title gooey">發展年表</div>
                     <div class="about-text">
                         <div class="years">
                             <div class="year">2000</div>
