微調副標題大小(未完成)

--- a/About.html
+++ b/About.html
@@ -100,7 +100,7 @@
                 </div>
             </div>
             <div class="swiper-slide">
-                <div class="abouts">
+                <div class="abouts subtitle">
                     <div class="about-title gooey">沿革</div>
                     <div class="about-text">
                         <p>本廠前身為「車路墘製糖所」
@@ -113,7 +113,7 @@
                 </div>
             </div>
             <div class="swiper-slide">
-                <div class="abouts">
+                <div class="abouts subtitle">
                     <div class="about-title gooey">核心價值</div>
                     <div class="about-text">
                         <p>傳創台灣本土擊樂，廣納世界文化</p>
@@ -124,7 +124,7 @@
                 </div>
             </div>
             <div class="swiper-slide">
-                <div class="abouts">
+                <div class="abouts subtitle">
                     <div class="about-title gooey">發展年表</div>
                     <div class="about-text">
                         <div class="years">
