關於背景調整(未完成2)

--- a/About.html
+++ b/About.html
@@ -23,7 +23,6 @@
 
 <body>
     <!-- 漢堡條 -->
-
     <div class="hamburger">
         <div class="ham-ani">
             <div class="stick stick-1"></div>
@@ -83,20 +82,26 @@
                 <div class="abouts">
                     <div class="en-title">
                         <h1> About
-                            <u class="line0">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;</u></h1>
+                            <u
+                                class="line0">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;</u>
+                        </h1>
                     </div>
                     <div class="cn-title">
-                        <div class="big-size"> &emsp;<u class="line01">&emsp;</u>關</div>於十鼓
+                        <div class="big-size"> &emsp;<u class="line01">&ensp;</u>關</div>於十鼓
                     </div>
                 </div>
             </div>
             <div class="swiper-slide color-D4A63F">
                 <div class="abouts subtitle">
-                    <div class="about-title gooey">簡介
+                    <div class="about-text-bacimg">
+                        <div class="subtitle">
+                            <div class="about-title gooey">簡介
+                            </div>
+                        </div>
+
+                        <div class="about-text text-color-F7F8F8">十鼓仁糖文創園區(仁德糖廠)前身為臺南車路墘糖廠為一處百年糖廠建築，一座親近文化藝術的新天地。園區佔 地約 7.5公頃，共有22座日治時代建築及自然生態空間，改成多樣空間規劃的文化場域，除了會議室、共同工作空 間、駐村藝術創作外，也包括婚宴派對、表演場地、藝廊、 劇場、製糖機器互動空間等，創造多元化主題體驗。</div>
                     </div>
-                    <div class="about-text">十鼓仁糖文創園區(仁德糖廠)前身為臺南車路墘糖廠為一處百年糖廠建築，一座親近文化藝術的新天地。園區佔 地約 7.5公頃，共有 22
-                        座日治時代建築及自然生態空間，
-                        改成多樣空間規劃的文化場域，除了會議室、共同工作空 間、駐村藝術創作外，也包括婚宴派對、表演場地、藝廊、 劇場、製糖機器互動空間等，創造多元化主題體驗。</div>
+
                 </div>
             </div>
             <div class="swiper-slide">
@@ -173,7 +178,7 @@
                         </h1>
                     </div>
                     <div class="cn-title cn-white">
-                        &emsp; <u class="line01">&emsp;</u>園區主題介紹
+                        &emsp;<u class="line01">&ensp;</u>園區主題介紹
                     </div>
                 </div>
             </div>
