--- a/01-About.html
+++ b/01-About.html
@@ -21,11 +21,35 @@
     <!-- 英文字體 -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Exo+2">
     <link rel="stylesheet" href="./subtitle.css">
+    <link rel="stylesheet" href="./subtitle-r.css">
     <style>
         #fp-nav ul li a span,
         #menu-line,
         .fp-slidesNav ul li a span {
             background: #f7f8f8;
+        }
+
+        .fp-controlArrow.fp-next {
+            right: 50px;
+            width: 0;
+            width: 0;
+            height: 0;
+            border-style: solid;
+            border-width: 25px 0 25px 25px;
+            border-color: transparent transparent transparent #3e3a39;
+
+
+
+        }
+
+        .fp-controlArrow.fp-prev {
+            left: 50px;
+            width: 0;
+            height: 0;
+            border-style: solid;
+            border-width: 25px 25px 25px 0;
+            border-color: transparent #3e3a39 transparent transparent;
+
         }
     </style>
 </head>
@@ -85,20 +109,20 @@
     <!-- 漢堡條 -->
 
     <div id="fullpage">
-        <div class="section sec-00">
-            <div class="abouts">
+        <div class="section sec-00 sec">
+            <div class=" About">
                 <div class="en-title">
-                    <h1> About
-                        <u class="line0">
-                            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;</u>
-                    </h1>
+                    <div class="About-t">About
+                        <u class="line01">
+                            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;</u></div>
+
                 </div>
                 <div class="cn-title">
-                    <div class="big-size"> &emsp;<u class="line01">&ensp;</u>關</div>於十鼓
+                    <div class="big-size">&emsp;<u class="line02">&emsp;</u>關</div>於十鼓
                 </div>
             </div>
         </div>
-        <div class="section sec-01">
+        <div class="section sec-01" data-anchor="firstPage">
             <div class="sec sec-01-1">
                 <div class="abouts">
                     <div class="about-text-bacimg">
@@ -106,20 +130,23 @@
                             <div class="about-title gooey">簡介</div>
                         </div>
                         <div class="about-text text-color-F7F8F8">
-                            十鼓仁糖文創園區(仁德糖廠)前身為臺南車路墘糖廠為一處百年糖廠建築，一座親近文化藝術的新天地。園區佔地約7.5公頃，共有22座日治時代建築及自然生態空間，改成多樣空間規劃的文化場域，除了會議室、共同工作空間、駐村藝術創作外，也包括婚宴派對、表演場地、藝廊、劇場、製糖機器互動空間等，創造多元化主題體驗。
+                            <div class="about-con">
+                                十鼓仁糖文創園區(仁德糖廠)前身為臺南車路墘糖廠為一處百年糖廠建築，一座親近文化藝術的新天地。園區佔地約7.5公頃，共有22座日治時代建築及自然生態空間，改成多樣空間規劃的文化場域，除了會議室、共同工作空間、駐村藝術創作外，也包括婚宴派對、表演場地、藝廊、劇場、製糖機器互動空間等，創造多元化主題體驗。
+                            </div>
+
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="section sec-02">
+        <div class="section sec-02" data-anchor="secondPage">
             <div class="sec sec-02-1">
                 <div class="abouts">
                     <div class="about-text-bacimg">
                         <div class="subtitle">
                             <div class="about-title gooey">沿革</div>
                         </div>
-                        <div class="about-text about-2-text">
+                        <div class="about-2-text">
                             <div class="text-wrap">
                                 本廠前身為「車路墘製糖所」，1909年由日資「臺灣製糖株式會社」創立，1910年開工生產。民國34年11月由國民政府資源委員會監理，並於次年接收。34/35年期製糖在資源委員會監理下，由原日人製糖會社人員完成。在太平洋戰爭期間，本廠雖未直接受到盟機轟炸，但間接影響設備失修及蔗作廢耕，製糖設備雖尚完整，但廠房等設備乃屬殘破不堪，尤其蔗園荒蕪、原料生產失調更為嚴重。民國35年5月1日「台灣糖業公司」成立，本廠隸屬「第二區分公司」管轄，民國39年7月本公司撤銷區分公司制，本廠劃歸「總爺總廠」督導。
                             </div>
@@ -132,19 +159,22 @@
             </div>
 
         </div>
-        <div class="section sec-03">
+        <div class="section sec-03" data-anchor="thirdPage">
             <div class="sec sec-03-1">
                 <div class="abouts">
                     <div class="about-text-bacimg">
                         <div class="subtitle">
                             <div class="about-title gooey">核心價值</div>
                         </div>
-                        <div class="about-text">
-                            <div class="core">傳創台灣本土擊樂，廣納世界文化</div>
-                            <div class="core">尊重歷史文化與之共存、共榮</div>
-                            <div class="core">傳承和演奏無價的工業遺產和台灣本土的樂音</div>
-                            <div class="core">一雙鼓棒為台灣寫下歷史之原創鼓團 「十」</div>
-                            <div class="core">代表鼓棒的交疊 並象徵十方力量的匯集</div>
+                        <div class="about-text text-color-F7F8F8">
+                            <div class="about-con">
+                                <div class="core">傳創台灣本土擊樂，廣納世界文化</div>
+                                <div class="core">尊重歷史文化與之共存、共榮</div>
+                                <div class="core">傳承和演奏無價的工業遺產和台灣本土的樂音</div>
+                                <div class="core">一雙鼓棒為台灣寫下歷史之原創鼓團 「十」</div>
+                                <div class="core">代表鼓棒的交疊 並象徵十方力量的匯集</div>
+                            </div>
+
                         </div>
                     </div>
 
@@ -152,134 +182,182 @@
             </div>
         </div>
         <div class="section sec-04">
-            <div class="abouts subtitle">
-                <div class="about-title gooey">發展年表</div>
-                <div class="about-text">
-                    <div class="years">
-                        <div class="year">2000</div>
-                        <div class="year-text">台南創立十鼓擊樂團 受邀至澳洲雪梨奧運聖火傳遞巡演</div>
-                    </div>
-                    <div class="years">
-                        <div class="year">2007</div>
-                        <div class="year-text">正式開幕，第一屆十鼓節</div>
-                    </div>
-                    <div class="years">
-                        <div class="year">2009</div>
-                        <div class="year-text">入圍第52屆葛萊美獎; 第9屆美國獨立音樂獎</div>
-                    </div>
-                    <div class="years">
-                        <div class="year">2011</div>
-                        <div class="year-text">第二文創園區 十鼓高雄橋糖文創園區</div>
-                    </div>
-                    <div class="years">
-                        <div class="year">2012</div>
-                        <div class="year-text">公視報導，定目劇成功案例</div>
-                    </div>
-                    <div class="years">
-                        <div class="year">2014</div>
-                        <div class="year-text">英國愛丁堡藝穗節; 評選9.5顆星音樂團隊</div>
-                    </div>
-                    <div class="years">
-                        <div class="year">2016</div>
-                        <div class="year-text">文創園區入圍WAF世界建築獎舊創新獎項</div>
-                    </div>
-                    <div class="years">
-                        <div class="year">2018</div>
-                        <div class="year-text">成立說茶、說菜、說書 台南市永樂町鼓茶樓
+            <div class="sec sec-04-1">
+                <div class="abouts ">
+                    <div class="about-text-bacimg">
+                        <div class="subtitle">
+                            <div class="about-title gooey">發展年表</div>
+                        </div>
+                        <div class="about-2-text">
+                            <div class="text-wrap">
+                                <div class="years">
+                                    <div class="year">2000</div>
+                                    <div class="year-text">台南創立十鼓擊樂團 受邀至澳洲雪梨奧運聖火傳遞巡演</div>
+                                </div>
+                                <div class="years">
+                                    <div class="year">2007</div>
+                                    <div class="year-text">正式開幕，第一屆十鼓節</div>
+                                </div>
+                                <div class="years">
+                                    <div class="year">2009</div>
+                                    <div class="year-text">入圍第52屆葛萊美獎; 第9屆美國獨立音樂獎</div>
+                                </div>
+                                <div class="years">
+                                    <div class="year">2011</div>
+                                    <div class="year-text">第二文創園區 十鼓高雄橋糖文創園區</div>
+                                </div>
+                            </div>
 
+
+                            <div class="text-wrap">
+                                <div class="years">
+                                    <div class="year">2012</div>
+                                    <div class="year-text">公視報導，定目劇成功案例</div>
+                                </div>
+                                <div class="years">
+                                    <div class="year">2014</div>
+                                    <div class="year-text">英國愛丁堡藝穗節; 評選9.5顆星音樂團隊</div>
+                                </div>
+                                <div class="years">
+                                    <div class="year">2016</div>
+                                    <div class="year-text">文創園區入圍WAF世界建築獎舊創新獎項</div>
+                                </div>
+                                <div class="years">
+                                    <div class="year">2018</div>
+                                    <div class="year-text">成立說茶、說菜、說書 台南市永樂町鼓茶樓
+
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
+
         </div>
-        <div class="section sec-05">
-            <div class="slide sec-05-00 " data-anchor="slide1">
-                <div class="abouts ">
+        <div class="section sec-05" data-anchor="forthPage">
+            <div class="slide sec-05-00 ">
+                <div class="About">
                     <div class="en-title">
-                        <h1>About
+                        <div class="About-t">About
                             <u
-                                class="line02">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;</u>
-                        </h1>
+                                class="line01">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;</u>
+                        </div>
+
+
                     </div>
                     <div class="cn-title cn-white">
-                        &emsp;<u class="line01">&ensp;</u>園區主題介紹
+                        &emsp;<u class="line02">&emsp;</u>園區主題介紹
                     </div>
                 </div>
             </div>
-            <div class="slide horizontal-slide" data-anchor="slide7">鼓樂饗宴</div>
-            <div class="slide horizontal-slide" data-anchor="slide8">極限體驗</div>
-            <div class="slide horizontal-slide" data-anchor="slide9">特色餐飲</div>
-            <div class="slide horizontal-slide" data-anchor="slide10">文創空間</div>
+            <div class="slide horizontal-slide" data-anchor="sixthPage">
+                <div class="intro-container">
+                    <div class="intro-title"> 鼓樂饗宴</div>
+                    <div class="intro-con con-color-1">
+                        <div class="intro-con-img img-self-1"></div>
+                        <div class="intro-con-box">
+                            <div class="intro-con-box-title">十鼓擊樂團</div>
+                            <div class="intro-con-box-text">獲海內外金曲獎、葛萊美獎、美國獨立獎三項大獎提名
+                            </div>
+                            <div class="intro-con-box-text">
+                                以在地的題材、風景、多樣化民族擊樂的元素，豐富了傳統擊樂原有面貌，震撼的鼓樂和視覺效果一直以來深受觀眾喜愛。團長期望藉此喚起國人對傳統鼓樂的重視，企圖為台灣開創出一個熱鬧、多元兼具本土，且具有前瞻性的鼓術文化風格，更期望能使台灣在世界上成為著名的【鼓樂之島】。
+                            </div>
+                            <div class="intro-con-icon-dis">
+                                <div class="intro-con-icon">more</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="slide horizontal-slide" data-anchor="seventhPage">
+                <div class="intro-container">
+                    <div class="intro-title">極限體驗</div>
+                    <div class="intro-con con-color-2">
+                        <div class="intro-con-img img-self-2"></div>
+                        <div class="intro-con-box">
+                            <div class="intro-con-box-title">十鼓仁糖文創園區</div>
+                            <div class="intro-con-box-text">
+                                是日治時代老糖廠改建而成的藝術文化村，園區內有刺激的煙囪溜滑梯、飛天宅急便，還可以欣賞夢糖劇場鼓樂表演，就像來到「大人版的遊樂園」！十鼓仁糖文創園區鄰近奇美博物館，推薦大家可以安排順遊兩個台南景點的行程！
+                            </div>
+                            <div class="intro-con-icon-dis">
+                                <div class="intro-con-icon">more</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="slide horizontal-slide" data-anchor="eighthPage">特色餐飲</div>
+            <div class="slide horizontal-slide" data-anchor="ninthPage">文創空間</div>
+
         </div>
-    </div>
-    <footer>版權聲明</footer>
+        <footer>版權聲明</footer>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
-        integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
-        integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.9/fullpage.extensions.min.js"></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
+            integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
+            crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
+            integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+            crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.9/fullpage.extensions.min.js"></script>
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
-    <script>
-        ////漢堡條///
-        const hamburger = document.querySelector('.hamburger')
-        const btn_group = document.querySelector('.btn-groupxxx')
-        const btns = btn_group.querySelector('.btn')
+        <script>
+            ////漢堡條///
+            const hamburger = document.querySelector('.hamburger')
+            const btn_group = document.querySelector('.btn-groupxxx')
+            const btns = btn_group.querySelector('.btn')
 
-        const offclick = () => {
-            btn_group.classList.toggle("active")
-            document.removeEventListener('click', offclick)
-            $(".stick").toggleClass(function () {
-                ///當點到漢堡條時MENU跟著被偵測顯示即隱藏///
-                $('.ham-menu').toggle('.display-none')
-                ///當點到漢堡條時MENU跟著被偵測顯示即隱藏///
-                return $(this).is('.open, .close') ? 'open close' : 'open';
-            });
-        }
-        const handclick = (e) => {
-            e.stopPropagation()
-            btn_group.classList.toggle("active")
-            if (btn_group.classList.contains("active")) {
-                document.addEventListener('click', offclick)
-            }
-        }
-        hamburger.addEventListener('click', handclick)
-        ///漢堡條任意點即可關閉菜單///
-
-        ///3條線變叉叉///
-        $(document).ready(function () {
-            $(".ham-ani").click(function () {
+            const offclick = () => {
+                btn_group.classList.toggle("active")
+                document.removeEventListener('click', offclick)
                 $(".stick").toggleClass(function () {
                     ///當點到漢堡條時MENU跟著被偵測顯示即隱藏///
                     $('.ham-menu').toggle('.display-none')
                     ///當點到漢堡條時MENU跟著被偵測顯示即隱藏///
                     return $(this).is('.open, .close') ? 'open close' : 'open';
                 });
+            }
+            const handclick = (e) => {
+                e.stopPropagation()
+                btn_group.classList.toggle("active")
+                if (btn_group.classList.contains("active")) {
+                    document.addEventListener('click', offclick)
+                }
+            }
+            hamburger.addEventListener('click', handclick)
+            ///漢堡條任意點即可關閉菜單///
+
+            ///3條線變叉叉///
+            $(document).ready(function () {
+                $(".ham-ani").click(function () {
+                    $(".stick").toggleClass(function () {
+                        ///當點到漢堡條時MENU跟著被偵測顯示即隱藏///
+                        $('.ham-menu').toggle('.display-none')
+                        ///當點到漢堡條時MENU跟著被偵測顯示即隱藏///
+                        return $(this).is('.open, .close') ? 'open close' : 'open';
+                    });
+                });
             });
-        });
-        ///3條線變叉叉///
-        ///漢堡條///
+            ///3條線變叉叉///
+            ///漢堡條///
 
-        new fullpage('#fullpage', {
-            menu: '#menu',
-            lockAnchors: false,
-            anchors: ['firstPage', 'secondPage', 'thirdPage', 'forthPage', 'fifthPage', 'sixthPage', 'seventhPage', 'eighthPage', 'ninthPage'],
-            navigation: true,
-            navigationColor: '#F7F8F8',
-            navigationPosition: 'right',
-            navigationTooltips: ['關於十鼓', '簡介', '沿革', '核心價值', '發展年表', '園區主題介紹'],
-
-            showActiveTooltip: true,
-            slidesNavigation: true,
-            slidesNavPosition: 'bottom',
-        });
-    </script>
+            new fullpage('#fullpage', {
+                menu: '#menu',
+                lockAnchors: false,
+                anchors: ['firstPage', 'secondPage', 'thirdPage', 'forthPage', 'fifthPage', 'sixthPage', 'seventhPage', 'eighthPage', 'ninthPage'],
+                navigation: true,
+                navigationColor: '#F7F8F8',
+                navigationPosition: 'right',
+                navigationTooltips: ['關於十鼓', '簡介', '沿革', '核心價值', '發展年表', '園區主題介紹'],
+                showActiveTooltip: true,
+                slidesNavigation: true,
+                slidesNavPosition: 'bottom',
+            });
+        </script>
 </body>
 
 </html>
