消息排版(初版)

--- a/02-News.html
+++ b/02-News.html
@@ -72,38 +72,96 @@
     <div class="New">
         <div class="new-title">
             <div class="new-title-all">
-                <h1>最新消息</h1>
+                最新消息
             </div>
-            <div class="new-title01">
-                <h3>園區公告</h3>
+            <div class="new-title01 ">
+                園區公告
             </div>
-            <div class="new-title01">
-                <h3>活動公告</h3>
-            </div>
-        </div>
-        <div class="new-context">
-            <div class="new-context-title"></div>
-            <div class="new-context-group">
-                <div class="news">
-                    <div class="new-img">imggg-01</div>
-                    <div class="new-time">2020-XX-XX</div>
-                    <div class="new-name">fjoasdifjosid</div>
-                    <div class="new-more">more</div>
-                </div>
-                <div class="news">
-                    <div class="new-img">imggg-01</div>
-                    <div class="new-time">2020-XX-XX</div>
-                    <div class="new-name">fjoasdifjosid</div>
-                    <div class="new-more">more</div>
-                </div>
-                <div class="news">
-                    <div class="new-img">imggg-01</div>
-                    <div class="new-time">2020-XX-XX</div>
-                    <div class="new-name">fjoasdifjosid</div>
-                    <div class="new-more">more</div>
-                </div>
+            <div class="new-title01 act">
+                活動公告
             </div>
         </div>
+        <div class="new-contexts">
+            <div class="new-context actt">
+                <div class="new-contain">
+                    <i class="fas fa-circle"></i>
+                    <div class="new-context-title">園區公告</div>
+                    <i class="fas fa-circle"></i>
+                    <div class="new-context-group">
+                        <div class="news">
+                            <div class="new-imgs"><img
+                                    src="https://tendrum.com.tw/userfiles/images/2020_09_26%E4%BB%81%E7%B3%96%E6%BC%94%E5%87%BA%E7%95%B0%E5%8B%95%E5%85%AC%E5%91%8A.jpg"
+                                    alt="" class='new-img'></div>
+                            <div class="new-time">2020-09-26</div>
+                            <div class="new-name">2020/9/26(六)演出節目異動歡迎大家選擇喜歡的場次觀賞謝謝！！</div>
+                            <div class="new-mores">
+                                <div class="new-more">more</div>
+                            </div>
+                        </div>
+                        <div class="news">
+                            <div class="new-imgs"><img
+                                    src="https://tendrum.com.tw/userfiles/images/2020_09_20%E6%97%A5%E9%96%93%E5%AE%9A%E7%9B%AE%E5%8A%87%E7%A7%BB%E8%87%B3%E6%B0%B4%E6%A7%BD%E5%8A%87%E5%A0%B4%E6%BC%94%E5%87%BA%E5%85%AC%E5%91%8A.jpg"
+                                    alt="" class='new-img'></div>
+                            <div class="new-time">2020-09-20</div>
+                            <div class="new-name">2020.09.20(日)臺南十鼓仁糖文創園區 演出異動公告~~十鼓仁糖文創園區-演出節目異動..</div>
+                            <div class="new-mores">
+                                <div class="new-more">more</div>
+                            </div>
+                        </div>
+                        <div class="news">
+                            <div class="new-imgs"><img
+                                    src="https://tendrum.com.tw/userfiles/images/2020_09_08-09_09%E7%B3%96%E6%99%B6%E8%90%BD%E9%AB%94%E5%B9%B4%E5%BA%A6%E6%AA%A2%E4%BF%AE%E6%9A%AB%E5%81%9C%E5%85%AC%E5%91%8A.jpg"
+                                    alt="" class='new-img'></div>
+                            <div class="new-time">2020-09-08</div>
+                            <div class="new-name">2020.09.08(二)~09.09(三)十鼓文創設施設備開放調整公告</div>
+                            <div class="new-mores">
+                                <div class="new-more">more</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="new-context">
+                <div class="new-contain">
+                    <i class="fas fa-circle"></i>
+                    <div class="new-context-title">活動公告</div>
+                    <i class="fas fa-circle"></i>
+                    <div class="new-context-group">
+                        <div class="news">
+                            <div class="new-imgs"><img
+                                    src="https://tendrum.com.tw/userfiles/images/2020_10_02-10_03%E6%89%8B%E5%90%88%E9%90%B5%E9%BC%93%E6%A8%82%E5%9C%98%E6%BC%94%E5%87%BA%E6%99%82%E9%96%93%E5%85%AC%E5%91%8A.jpg"
+                                    alt="" class='new-img'></div>
+                            <div class="new-time">2020-10-02</div>
+                            <div class="new-name">2020/10/02(五)、10/03(六)十鼓仁糖文創園區 夜間定目劇演出....</div>
+                            <div class="new-mores">
+                                <div class="new-more">more</div>
+                            </div>
+                        </div>
+                        <div class="news">
+                            <div class="new-imgs"><img src="https://tendrum.com.tw/userfiles/images/2020_09_26%E4%BB%81%E7%B3%96%E6%BC%94%E5%87%BA%E7%95%B0%E5%8B%95%E5%85%AC%E5%91%8A.jpg" alt="" class='new-img'></div>
+                            <div class="new-time">2020-09-26</div>
+                            <div class="new-name">夢糖劇場十鼓擊樂團鼓樂定目劇演出異動公告
+                                </div>
+                            <div class="new-mores">
+                                <div class="new-more">more</div>
+                            </div>
+                        </div>
+                        <div class="news">
+                            <div class="new-imgs"><img src="https://scontent.frmq2-2.fna.fbcdn.net/v/t1.0-9/118851016_1719251154918227_7315808194877518376_o.jpg?_nc_cat=104&_nc_sid=730e14&_nc_ohc=gT0_04if7LYAX-IIeU1&_nc_ht=scontent.frmq2-2.fna&oh=a28b7f9e573355eea4c656204d839e66&oe=5F9F1457" alt="" class='new-img'></div>
+                            <div class="new-time">2020-09-05</div>
+                            <div class="new-name">2020/09/05(六)二手市集開幕時間:早上9:00~下午6:00。歡迎各位...
+                                </div>
+                            <div class="new-mores">
+                                <div class="new-more">more</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
     </div>
     <footer>版權聲明</footer>
 
@@ -159,6 +217,24 @@
         });
         ///3條線變叉叉///
         ///漢堡條///
+
+        ///假分頁///
+        var new_title01 = document.querySelectorAll('.new-title01')
+        var new_context = document.querySelectorAll('.new-context')
+        for (var i = 0; i < new_title01.length; i++) {
+            const index = i
+            new_title01[i].onclick = function () {
+                for (var i = 0; i < new_title01.length; i++) {
+                    new_title01[i].classList.add('act')
+                    new_context[i].classList.remove('actt')
+                }
+                console.log(index)
+                new_title01[index].classList.remove('act')
+                new_context[index].classList.add('actt')
+            }
+        }
+        ///假分頁///
+
     </script>
 </body>
 
