--- a/01-About.html
+++ b/01-About.html
@@ -251,7 +251,7 @@
                     </div>
                 </div>
             </div>
-            <div class="slide horizontal-slide" data-anchor="sixthPage">
+            <div class="slide horizontal-slide" data-anchor="seventhPage">
                 <div class="intro-container">
                     <div class="intro-title"> 鼓樂饗宴</div>
                     <div class="intro-con con-color-1">
@@ -270,7 +270,7 @@
                     </div>
                 </div>
             </div>
-            <div class="slide horizontal-slide" data-anchor="seventhPage">
+            <div class="slide horizontal-slide" data-anchor="eighthPage">
                 <div class="intro-container">
                     <div class="intro-title">極限體驗</div>
                     <div class="intro-con con-color-2">
@@ -287,8 +287,8 @@
                     </div>
                 </div>
             </div>
-            <div class="slide horizontal-slide" data-anchor="eighthPage">特色餐飲</div>
-            <div class="slide horizontal-slide" data-anchor="ninthPage">文創空間</div>
+            <div class="slide horizontal-slide" data-anchor="ninthPage">特色餐飲</div>
+            <div class="slide horizontal-slide" data-anchor="tenthPage">文創空間</div>
 
         </div>
         <footer>版權聲明</footer>
@@ -348,7 +348,7 @@
             new fullpage('#fullpage', {
                 menu: '#menu',
                 lockAnchors: false,
-                anchors: ['firstPage', 'secondPage', 'thirdPage', 'forthPage', 'fifthPage', 'sixthPage', 'seventhPage', 'eighthPage', 'ninthPage'],
+                anchors: ['firstPage', 'secondPage', 'thirdPage', 'forthPage', 'fifthPage', 'sixthPage', 'seventhPage', 'eighthPage', 'ninthPage','tenPage'],
                 navigation: true,
                 navigationColor: '#F7F8F8',
                 navigationPosition: 'right',
