微調首頁及關於  夜新增場地

--- a/06-Rented.html
+++ b/06-Rented.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,6 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Exo+2">
 </head>
+
 <body>
     <!-- 漢堡條 -->
     <div class="hamburger">
@@ -66,6 +68,71 @@
         </div>
     </div>
     <!-- 漢堡條 -->
+    <div class="Rented">
+        <div class="button-bar">
+            <div class="button-g">
+                <div class="tittle">場地出租</div>
+                <!-- 標題 -->
+                <div class="lease-box">
+                    <!-- Button trigger modal -->
+                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+                        <h2>租借要點</h2>
+                    </button>
+                    <!-- Modal -->
+                    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog"
+                        aria-labelledby="exampleModalLabel" aria-hidden="true">
+                        <div class="modal-dialog modal-dialog-centered modal-xl" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h1 class="modal-title" id="exampleModalLabel">租借要點</h1>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                                <div class="modal-body">
+                                    <div class="text-box">
+                                        一般租借/婚宴租借
+                                        <br>不得隨意拿走園區物品或損壞物品。(違反者依原價賠償及歸還)
+                                        <br>使用完成後必須陪同園區人員檢查確定無誤，
+                                        <br>如垃圾與回收物品清運不乾淨，酌收垃圾清理費。七日(工作天數)內退回押金
+                                        <br>電話號碼：06-266-2225#710
+                                        <br>傳真號碼：06-2661413
+                                        <br>訂金(確認時)與押金(確認時)及尾款(當天)繳款方式現金或匯款。
+                                        <br>訂金退費機制：
+                                        <br>退訂於一個月內取消，則退訂金金額，恕不退還
+                                        <br>退訂於二個月以上至三個月取消，則退訂金金額 30%
+                                        <br>退訂於三個月以上至五個月取消，則退訂金金額 50%
+                                        <br>尾款需於宴會當日以現金繳清金額
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- 場地租借 -->
+                <a class="lease-box " href="https://tendrum.com.tw/venueOnlinecontact/zt">
+                    線上預約</a>
+            </div>
+        </div>
+        <div class="photo-R">
+            <div class="photo">
+                <!-- Swiper -->
+                <div class="swiper-container">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <img src=" " alt="">十鼓會議廳</div>
+                        <div class="swiper-slide">永不出軌</div>
+                        <div class="swiper-slide">齒輪舞台</div>
+                        <div class="swiper-slide">水槽劇場</div>
+                    </div>
+                    <!-- Add Pagination -->
+                    <div class="swiper-pagination"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <footer>版權聲明</footer>
 
     <!-- JS -->
 
@@ -77,7 +144,7 @@
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
         integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script>    
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
@@ -86,7 +153,7 @@
         const hamburger = document.querySelector('.hamburger')
         const btn_group = document.querySelector('.btn-groupxxx')
         const btns = btn_group.querySelector('.btn')
-        
+
         const offclick = () => {
             btn_group.classList.toggle("active")
             document.removeEventListener('click', offclick)
@@ -120,6 +187,19 @@
         });
         ///3條線變叉叉///
         ///漢堡條///
+
+        var swiper = new Swiper('.swiper-container', {
+            direction: 'vertical',
+            pagination: {
+                el: '.swiper-pagination',
+                clickable: true,
+            },
+            autoplay: {
+                delay: 2500,
+                disableOnInteraction: false,
+            },
+        });
     </script>
 </body>
+
 </html>
