--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <link rel="stylesheet" href="./TenDrum.css">
     <link rel="stylesheet" href="./wickedcss.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+HK:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+HK:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+HK:wght@100;300;400;500;700;900&display=swap"
+        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+HK:wght@100;300;400;500;700;900&display=swap"
+        rel="stylesheet">
     <style>
 
     </style>
@@ -17,30 +19,42 @@
 
 <body>
     <!-- <div class="Mask fadeOut"></div> -->
+
     <div class="Nav">
-        <img src="./img/十鼓logo去背.png" alt="" class="Logo-pic barrelRoll">
-        <div class="Menu-group">
-            <a href="./01-About.html" class="index-btn ">
-                <div class="btn btn--stripe">關於十鼓</div>
-            </a>
-            <a href="./02-News.html" class="index-btn ">
-                <div class="btn btn--stripe">最新消息</div>
-            </a>
-            <a href="./03-Facility.html" class="index-btn ">
-                <div class="btn btn--stripe">設施體驗</div>
-            </a>
-            <a href="./04-Drum.html" class="index-btn">
-                <div class="btn btn--stripe">鼓樂饗宴</div>
-            </a>
-            <a href="./05-Information.html" class="index-btn">
-                <div class="btn btn--stripe">入園資訊</div>
-            </a>
-            <a href="./06-Rented.html" class="index-btn">
-                <div class="btn btn--stripe">場地租借</div>
-            </a>
+        <img src="./img/十鼓logo去背.png" alt="" class="Logo-pic zoomer">
+        <div class="left-group">
+            <div class="Menu-group">
+                <a href="./01-About.html" class="index-btn ">
+                    <div class="btn btn--stripe">關於十鼓</div>
+                </a>
+                <a href="./02-News.html" class="index-btn ">
+                    <div class="btn btn--stripe">最新消息</div>
+                </a>
+                <a href="./03-Facility.html" class="index-btn ">
+                    <div class="btn btn--stripe">設施體驗</div>
+                </a>
+                <a href="./04-Drum.html" class="index-btn">
+                    <div class="btn btn--stripe">鼓樂饗宴</div>
+                </a>
+                <a href="./05-Information.html" class="index-btn">
+                    <div class="btn btn--stripe">入園資訊</div>
+                </a>
+                <a href="./06-Rented.html" class="index-btn">
+                    <div class="btn btn--stripe">場地租借</div>
+                </a>
+            </div>
+            <div class="cloud-group">
+                <img src="./img/插圖/雲-01.png" alt="" class="floater cloud cloud01">
+                <img src="./img/插圖/雲-02.png" alt="" class="rotation cloud cloud02">
+            </div>
+
         </div>
+
     </div>
     <div class="big-img"></div>
+    </div>
+
+
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
