--- a/03-Facility.html
+++ b/03-Facility.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./TenDrum.css">
+    <link rel="stylesheet" href="./wickedcss.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap" rel="stylesheet">
 </head>
 
@@ -63,6 +64,53 @@
     </div>
     <!-- 漢堡條 -->
 
+
+    <div class="Facility">
+        <div class="bag-img"></div>
+        <div class="margin-use"></div>
+        <h1 class="facility-title"> 極限體驗</h1>
+        <div class="img-groups">
+            <div class="img-team">
+                <div class="image-circle">
+                    <img src="./img/設施/天空上的鞦韆.jpg" class="imgg" alt="">
+                </div>
+                <div class="img-name floater">煙囪滑梯</div>
+            </div>
+            <div class="img-team">
+                <div class="image-circle">
+                    <img src="./img/設施/天空上的鞦韆.jpg" class="imgg" alt="">
+                </div>
+                <div class="img-name wiggle">天空上的鞦韆</div>
+            </div>
+            <div class="img-team">
+                <div class="image-circle">
+                    <img src="./img/設施/天空上的鞦韆.jpg" class="imgg" alt="">
+                </div>
+                <div class="img-name floater">飛天宅急便</div>
+            </div>
+            <div class="img-team">
+                <div class="image-circle">
+                    <img src="./img/設施/天空上的鞦韆.jpg" class="imgg" alt="">
+                </div>
+                <div class="img-name floater">蜘蛛人</div>
+            </div>
+            <div class="img-team">
+                <div class="image-circle">
+                    <img src="./img/設施/天空上的鞦韆.jpg" class="imgg" alt="">
+                </div>
+                <div class="img-name floater">糖晶落體</div>
+            </div>
+            <div class="img-team">
+                <div class="image-circle">
+                    <img src="./img/設施/天空上的鞦韆.jpg" class="imgg" alt="">
+                </div>
+                <div class="img-name floater">鋼鐵鐳戰</div>
+            </div>
+        </div>
+
+
+    </div>
+    <footer>版權聲明</footer>
 
     <!-- JS -->
 
