--- a/index.html
+++ b/index.html
@@ -19,88 +19,45 @@
 
 <body>
     <!-- <div class="Mask fadeOut"></div> -->
-
-    <div class="Nav">
-        <img src="./img/十鼓logo去背.png" alt="" class="Logo-pic zoomer">
-        <div class="left-group">
-            <div class="Menu-group">
-                <a href="./01-About.html" class="index-btn ">
-                    <div class="btn btn--stripe">關於十鼓</div>
-                </a>
-                <a href="./02-News.html" class="index-btn ">
-                    <div class="btn btn--stripe">最新消息</div>
-                </a>
-                <a href="./03-Facility.html" class="index-btn ">
-                    <div class="btn btn--stripe">設施體驗</div>
-                </a>
-                <a href="./04-Drum.html" class="index-btn">
-                    <div class="btn btn--stripe">鼓樂饗宴</div>
-                </a>
-                <a href="./05-Information.html" class="index-btn">
-                    <div class="btn btn--stripe">入園資訊</div>
-                </a>
-                <a href="./06-Rented.html" class="index-btn">
-                    <div class="btn btn--stripe">場地租借</div>
-                </a>
-            </div>
-            <div class="cloud-group">
-                <img src="./img/插圖/雲-01.png" alt="" class="floater cloud cloud01">
-                <img src="./img/插圖/雲-02.png" alt="" class="rotation cloud cloud02">
+    <div class="index">
+        <div class="Nav">
+            <img src="./img/十鼓logo去背.png" alt="" class="Logo-pic zoomer">
+            <div class="left-group">
+                <div class="Menu-group">
+                    <a href="./01-About.html" class="index-btn ">
+                        <div class="btn btn--stripe">關於十鼓</div>
+                    </a>
+                    <a href="./02-News.html" class="index-btn ">
+                        <div class="btn btn--stripe">最新消息</div>
+                    </a>
+                    <a href="./03-Facility.html" class="index-btn ">
+                        <div class="btn btn--stripe">設施體驗</div>
+                    </a>
+                    <a href="./04-Drum.html" class="index-btn">
+                        <div class="btn btn--stripe">鼓樂饗宴</div>
+                    </a>
+                    <a href="./05-Information.html" class="index-btn">
+                        <div class="btn btn--stripe">入園資訊</div>
+                    </a>
+                    <a href="./06-Rented.html" class="index-btn">
+                        <div class="btn btn--stripe">場地租借</div>
+                    </a>
+                </div>
+                <div class="cloud-group">
+                    <img src="./img/插圖/雲-01.png" alt="" class="floater cloud cloud01">
+                    <img src="./img/插圖/雲-02.png" alt="" class="rotation cloud cloud02">
+                </div>
             </div>
 
         </div>
-
-    </div>
-    <div class="big-img"></div>
+        <div class="big-img"></div>
     </div>
 
 
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
-
-    <script>
-        anime.timeline({ loop: true })
-            .add({
-                targets: '.ml5 .line',
-                opacity: [0.5, 1],
-                scaleX: [0, 1],
-                easing: "easeInOutExpo",
-                duration: 700
-            }).add({
-                targets: '.ml5 .line',
-                duration: 600,
-                easing: "easeOutExpo",
-                translateY: (el, i) => (-0.625 + 0.625 * 2 * i) + "em"
-            }).add({
-                targets: '.ml5 .ampersand',
-                opacity: [0, 1],
-                scaleY: [0.5, 1],
-                easing: "easeOutExpo",
-                duration: 600,
-                offset: '-=600'
-            }).add({
-                targets: '.ml5 .letters-left',
-                opacity: [0, 1],
-                translateX: ["0.5em", 0],
-                easing: "easeOutExpo",
-                duration: 600,
-                offset: '-=300'
-            }).add({
-                targets: '.ml5 .letters-right',
-                opacity: [0, 1],
-                translateX: ["-0.5em", 0],
-                easing: "easeOutExpo",
-                duration: 600,
-                offset: '-=600'
-            }).add({
-                targets: '.ml5',
-                opacity: 0,
-                duration: 1000,
-                easing: "easeOutExpo",
-                delay: 1000
-            });
-    </script>
+   
 
 </body>
 
