--- a/03-Facility.html
+++ b/03-Facility.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./TenDrum.css">
+    <link rel="stylesheet" href="./CSS/TenDrum.css">
     <link rel="stylesheet" href="./wickedcss.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap" rel="stylesheet">
 </head>
